dao login feature added

--- a/python/d.ipynb
+++ b/python/d.ipynb
@@ -50,24 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Candle' from 'entity.candle' (d:\\git\\Auto-Stock\\python\\entity\\candle.py)",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-c1a04a329b66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mentity\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcandle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32md:\\git\\Auto-Stock\\python\\entity\\candle.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mrequest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menum\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstockEnum\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCandleUnit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mentity\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcandle\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCandle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Candle' from 'entity.candle' (d:\\git\\Auto-Stock\\python\\entity\\candle.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from entity import candle"
+    "from entity.candle import Candle\n",
+    "from entity.candleChart import CandleChart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from request.dao import Dao"
    ]
   },
   {
@@ -75,7 +72,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Dao()"
+   ]
   }
  ]
 }
