--- a/python/d.ipynb
+++ b/python/d.ipynb
@@ -24,47 +24,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from entity.candle import Candle\n",
+    "from entity.candleChart import CandleChart\n",
+    "from request.enum.stockEnum import CandleUnit, OfferStock, RealTimeDataEnum, TrCode\n",
+    "from request.dao import Dao\n",
+    "from PyQt5.QtWidgets import QApplication\n",
+    "from entity.stock import Stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = QApplication([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "hello\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<request.dao.Dao at 0xf79a050>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "Dao()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dao().login()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<entity.stock.Stock at 0x7711d0>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
-    "from entity.stock import Stock"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from entity.candle import Candle\n",
-    "from entity.candleChart import CandleChart"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from request.dao import Dao"
+    "E_MART = Dao().request_stock_instance(\"139480\")"
    ]
   },
   {
@@ -72,9 +106,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Dao()"
-   ]
+   "source": []
   }
  ]
 }
