bug fix: get_tr_data_slot indention problem

--- a/python/src/test/lani.ipynb
+++ b/python/src/test/lani.ipynb
@@ -115,224 +115,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cond = Dao().request_condition_list()"
+    "from request.enum.stockEnum import CandleUnit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[['000', '테스트'], ['001', '부자']]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "cond"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[['000', '테스트'], ['001', '부자']]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "s = Dao().request_condition_list()\n",
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n",
-      "<entity.stock.Stock object at 0x0580D770>\n",
-      "<entity.stock.Stock object at 0x0580D1B0>\n"
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "get_today_date() takes 0 positional arguments but 1 was given",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-0f6116342441>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtoday_datetime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_today_date\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest_candle_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me_mart\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mCandleUnit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDAY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: get_today_date() takes 0 positional arguments but 1 was given"
      ]
     }
    ],
    "source": [
-    "start_time = time.time()\n",
-    "for i in range(40):\n",
-    "    print(Dao().request_stock_instance(\"009540\"))\n",
-    "    time.sleep(0.168)\n",
-    "end_time = time.time()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "8.823493957519531"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
-   "source": [
-    "delta = end_time-start_time\n",
-    "delta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n",
-      "<entity.stock.Stock object at 0x0C9C2150>\n",
-      "<entity.stock.Stock object at 0x0C9C2DB0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "start_time = time.time()\n",
-    "for i in range(40):\n",
-    "    print(Dao().request_stock_instance(\"009540\"))\n",
-    "    time.sleep(0.2)\n",
-    "end_time = time.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "10.201381921768188"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
-   "source": [
-    "delta = end_time-start_time\n",
-    "delta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hell: Dao"
+    "# today_datetime = Dao().get_today_date()\n",
+    "\n",
+    "data = Dao().request_candle_data(e_mart, CandleUnit.DAY, 2)"
    ]
   },
   {
